# VinayakFortune

./: .gitignore  ChatHistory.txt  Makefile  README.md  RUNBOOK_after_paste.md  docker-compose.yml  merge_pr23_audit.json  merge_pr24_audit.json  merge_pr25_audit.json  merge_pr27_audit.json  merge_pr31_audit.json  merge_pr33_audit.json  merge_pr34_audit.json  merge_pr35_audit.json  merge_pr37_audit.json  merge_pr39_audit.json  merge_pr40_audit.json
.github/: PULL_REQUEST_TEMPLATE.md
ai-plane/: README.md
docs/: README.md  build_manifest.py  generate_pdfs.py  manifest.json
docs/00-Governance/: 00_documentation_governance.md  PHASE_C_POST_UNBLOCK_ROADMAP.md  branch_protection.json
docs/01-PRD/: 01_product_requirements_document.md
docs/02-TRD/: 02_technical_requirements_document.md
docs/03-ApplicationFlow/: 03_application_flow.md
infra/: README.md
scripts/: README.md  merge_pr18_audit.json  merge_pr18_cycle.sh  merge_pr19_audit.json  merge_pr23_cycle.sh  merge_pr24_cycle.sh  merge_pr25_cycle.sh  merge_pr27_cycle.sh  merge_pr31_cycle.sh  merge_pr33_cycle.sh  merge_pr34_cycle.sh  merge_pr35_cycle.sh  merge_pr37_cycle.sh  merge_pr39_cycle.sh  merge_pr40_cycle.sh  post_paste_cycle.sh
services/auth-svc/: .dockerignore  DESIGN.md  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  pr_description_template.md  pyproject.toml
services/auth-svc/app/: __init__.py  session_manager.py  test_session_manager.py
services/hello-world/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/hello-world/app/: main.py  test_main.py
web/: README.md
(+34 files in other folders)
