[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auth-svc"
version = "0.1.0"
description = "Auth service for VentureMiner AI — local subset (in-memory session manager)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["app"]
addopts = "-v --strict-markers"
